<resources>
    <string name="app_name">SEN4ALL</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="select_a_context">Select a context</string>
    <string name="select_a_constellation">Select a constellation</string>
    <string name="select_a_layer">Select Layer</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="land">Land</string>
    <string name="marine">Marine</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="logo">Logo</string>
    <string name="info">Info</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="position">Position</string>
    <string name="draw">Draw</string>
    <string name="sentinel_1">Sentinel 1</string>
    <string name="sentinel_2">Sentinel 2</string>
    <string name="sentinel_3">Sentinel 3</string>
    <string name="sentinel_5">Sentinel 5</string>

    <string name="search_by_location">Search by location</string>
    <string name="info_1">Application for Land, Water and Air Quality Monitoring using Copernicus Sentinels and Land Monitoring Service</string>
    <string name="info_2">SEN4ALL is a mobile phone application for European citizens offering easily accessible information on land, water and air monitoring.
        \n\nThis application enables users to target precise geographical areas and to display maps showing crops characteristics, water and air quality, vegetation status and data for urban monitoring and planning, based on Earth Observation system (Copernicus Sentinel).
        \n\nSEN4ALL relies on real-time data retrieved form Copernicus Sentinels 1, 2 and 5 including water surface roughness, urban area location and monitoring, crop monitoring, NDVI, soil moisture and concentration of multiple gases in the atmosphere.</string>
    <string name="zoom_level">Zoom Level: %1$s</string>
    <string name="pixel_size">Pixel: %1$s m</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="noLocation">Geolocation is required to use this feature, please enable it and try again.</string>
    <string name="noInternet">No internet connection available, please try later.</string>

</resources>