<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingTop="24dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:gravity="end"
        android:baselineAligned="false">


        <ImageButton
            android:id="@+id/aboutClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cancel"
            android:src="@drawable/icons_close" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:src="@drawable/logo_v"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="32dp"
                android:layout_weight="6">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_1"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="18sp"
                    android:textColor="@color/dark"
                    android:lineSpacingExtra="2sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_2"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/dark"
                    android:lineSpacingExtra="2sp"/>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>