<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingBottom="48dp">

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:baselineAligned="false"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start">

            <ImageView
                android:layout_width="199dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/logo_h"
                android:contentDescription="@string/logo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <ImageButton
                android:id="@+id/about_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/icons_info"
                android:background="@android:color/transparent"
                android:contentDescription="@string/info"/>
            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/icons_close"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cancel"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contextSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="5"
        android:paddingHorizontal="48dp"
        app:layout_constraintTop_toBottomOf="@+id/topbar">

        <ImageView
            android:id="@+id/previousContext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icons_chevron_left"
            android:contentDescription="@string/left"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:text="@string/select_a_context"
                android:textColor="@color/primaryDark"/>
            <ImageView
                android:id="@+id/contextIconAtmo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/icons_atmo"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/land"/>
            <ImageView
                android:id="@+id/contextIconLand"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/icons_land"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:contentDescription="@string/land"/>
            <ImageView
                android:id="@+id/contextIconMarine"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/icons_marine"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:contentDescription="@string/land"/>
            <TextView
                android:id="@+id/contextTextAtmo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/dark"
                android:text="@string/atmosphere"/>
            <TextView
                android:id="@+id/contextTextLand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/dark"
                android:visibility="gone"
                android:text="@string/land"/>
            <TextView
                android:id="@+id/contextTextMarine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/dark"
                android:visibility="gone"
                android:text="@string/marine"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/nextContext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icons_chevron_right"
            android:contentDescription="@string/right"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/includeContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@+id/contextSelect"
        app:layout_constraintBottom_toTopOf="@+id/moreAnimation">

        <include
            android:id="@+id/atmosphereContext"
            layout="@layout/activity_include_atmosphere"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="64dp" />

        <include layout="@layout/activity_include_land"
            android:id="@+id/landContext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingHorizontal="64dp"/>

        <include layout="@layout/activity_include_marine"
            android:id="@+id/marineContext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingHorizontal="64dp"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/moreAnimation"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/sen4all_arrow"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>