<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:fitsSystemWindows="true">



    <WebView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

<!--    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_searchmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        app:hintEnabled="true"
        app:passwordToggleEnabled="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_searchmap"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icons_search"
            android:drawablePadding="4dp"
            android:hint="@string/search_by_location"/>
    </com.google.android.material.textfield.TextInputLayout>-->

    <LinearLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <org.erasmicoin.euspa.sen4all.SearchAutocomplete
            android:id="@+id/textInputEditText_searchmap"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icons_search"
            android:drawablePadding="6dp"
            android:completionThreshold="3"
            android:hint="@string/search_by_location"
            android:inputType="text"
            android:autofillHints=""/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp"
                android:paddingHorizontal="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttons_mapitem"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/zoomLevelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zoom_level"
                    style="@style/mapInfoText"/>

                <TextView
                    android:id="@+id/pixelSizeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pixel_size"
                    style="@style/mapInfoText"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/datePicker"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/buttons_mapitem"
                android:gravity="end"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true">

                <ImageButton
                    android:id="@+id/goBackOneDay"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icons_chevron_left"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/left"/>

                <TextView
                    android:id="@+id/selectedDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textColor="@color/dark"
                    android:text="30/09/2023"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/icons_cal" />

                <ImageButton
                    android:id="@+id/goForwardOneDay"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icons_chevron_right"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/right"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/legendImage"
        android:visibility="gone"
        android:layout_width="80dp"
        android:layout_height="160dp"
        android:background="@drawable/buttons_mapitem"
        android:scaleType="fitCenter"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
        />

    <LinearLayout
        android:id="@+id/drawDrawer"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/map_controls"
        app:layout_constraintEnd_toEndOf="@id/map_controls"
        android:background="@drawable/buttons_draw_background"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="48dp">

        <ImageButton
            android:id="@+id/drawCircle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icons_draw_circle"
            app:tint="@color/dark"
            android:contentDescription="@string/zoom_out"/>

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@color/border"/>

        <ImageButton
            android:id="@+id/drawSquare"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icons_draw_square"
            app:tint="@color/dark"
            android:contentDescription="@string/zoom_in"/>

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@color/border"/>

        <ImageButton
            android:id="@+id/drawTriangle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icons_draw_triangle"
            app:tint="@color/dark"
            android:contentDescription="@string/position"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/map_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginEnd="16dp">
        
        <ImageButton
            android:id="@+id/zoomInButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/buttons_fab"
            android:src="@drawable/icons_zoom_in"
            app:tint="@color/dark"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/zoom_in"/>

        <ImageButton
            android:id="@+id/zoomOutButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/buttons_fab"
            android:src="@drawable/icons_zoom_out"
            app:tint="@color/dark"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/zoom_out"/>

        <ImageButton
            android:id="@+id/myLocationButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/buttons_fab"
            android:src="@drawable/icons_pinmap"
            app:tint="@color/dark"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/position"/>

        <ImageButton
            android:id="@+id/toggleDraw"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/buttons_fab"
            android:src="@drawable/icon_draw_btn_map"
            app:tint="@color/dark"
            android:visibility="gone"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/position"/>

    </LinearLayout>



<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="64dp"
        android:layout_gravity="bottom|end"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icons_layers"
        app:tint="@color/accent"
        android:backgroundTint="@color/alpha"
        android:elevation="0dp"
        app:elevation="0dp"
        android:contentDescription="FAB"/>-->

    <TextView
        android:id="@+id/layerSelectorButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/buttons_mapitem"
        android:text="@string/select_a_layer"
        android:paddingEnd="16dp"
        android:paddingStart="8dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:drawablePadding="4dp"
        android:textColor="@color/dark"
        android:contentDescription="@string/select_a_layer"
        app:drawableStartCompat="@drawable/icons_layersel_map" />

    <LinearLayout
        android:id="@+id/loader"
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/layerSelectorButton"
        app:layout_constraintEnd_toStartOf="@id/layerSelectorButton">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/sen4all_loader"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>